--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "."
-    // "paths" :{
-      
-    // }
+    "baseUrl": ".",
   },
   "ts-node": {
     "compilerOptions": {
