--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "./config/jest/**/*.ts",
     "./config/build/**/*.ts",
     "./config/storybook/**/*.ts",
+    "./json-server/**/*.ts",
     "./src/**/*.tsx",
     "./src/**/*.ts",
     "./babel.config.json",
