--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "selector-class-pattern": null,
     "indentation": [2],
     "string-quotes": "single",
+    "color-hex-length": "long",
     "scss/at-import-partial-extension": null
   }
 }
